2012-03-09  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/html/help.xsl: Removed double entries for scan config details
	  table.

2012-03-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Add Download column.

2012-03-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-report-details): Add some space between the back
	arrows and the first number in the Filtered Results dialog heading.

2012-03-06  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-gsa-logo): Apply missing port list responses for
	indicator icon.

2012-03-06  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/html/help.xsl: Corrected typos (aspell run).

2012-03-06  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* src/html/help.xsl: Corrected typos.

2012-02-29  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_schedule_omp): Get minutes from correct param.

2012-02-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (target): Limit the hosts column to 500 chars.

2012-02-27  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (configure_targets.html): Adjust for "From file" Hosts
	option.

2012-02-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Only check target_locator when
	importing.

	* src/html/omp.xsl (html-create-target-form): Add the "From file" option
	to the case where target sources is empty.  Correct the maxlength in the
	other case.

2012-02-24  Matthew Mundell <matthew.mundell@greenbone.net>

	Allow upload of targets from a file.

	* src/gsad.c (init_validator): Add file to target_source.

	* src/gsad_omp.c (create_target_omp): Get hosts from file param if
	target_source is file.

	* src/html/omp.xsl (html-create-target-form): Add file target source.

2012-02-24  Matthew Mundell <matthew.mundell@greenbone.net>
